c2prj1_cards/grade.txt
Grading at Fri Aug 17 12:27:08 UTC 2018
Compiling cards.c
cards.c: In function ‘ranking_to_string’:
cards.c:18:25: error: ‘returnv’ undeclared (first use in this function)
   case THREE_OF_A_KIND: returnv"THREE OF A KIND"; break;
                         ^
cards.c:18:25: note: each undeclared identifier is reported only once for each function it appears in
cards.c:18:32: error: expected ‘;’ before string constant
   case THREE_OF_A_KIND: returnv"THREE OF A KIND"; break;
                                ^
Could not compile your card.c!

Overall Grade: FAILED
